# foodieyak

./: .gitignore  README.md  firestore.rules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: problem-matcher-vitest-color.json  problem-matcher-vitest.json
.github/workflows/: api.yml  deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  foodieyak-job.yml  functions.yml  pull-request-preview.yml  test.yml  testv2.yml  typescript.yml  ui.yml
api/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
api/dbschema/: default.esdl
api/dbschema/migrations/: 00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql  00012.edgeql  00013.edgeql  00014.edgeql  00015.edgeql  00016.edgeql  00017.edgeql  00018.edgeql  00019.edgeql  00020.edgeql  00021.edgeql  00022.edgeql  00023.edgeql  00024.edgeql  00025.edgeql  00026.edgeql  00027.edgeql  00028.edgeql  00029.edgeql  00030.edgeql  00031.edgeql
api/foodieyak/: README.md  app.py  auth.py  config.py  db.py  main.py  middleware.py  queries.py
api/foodieyak/endpoints/: base.py  current_user.py  homepage.py  homepage_test.py  login.py  login_test.py  signup.py  signup_test.py  team_create.py  team_invite_accept.py  team_invite_create.py  team_invite_list.py
api/foodieyak/middleware/: session.py
api/foodieyak/queries/: accept_team_invite.edgeql  accept_team_invite_async_edgeql.py  create_session.edgeql  create_session_async_edgeql.py  create_team.edgeql  create_team_async_edgeql.py  create_team_invite.edgeql  create_team_invite_async_edgeql.py  create_user.edgeql  create_user_async_edgeql.py  get_user_by_email.edgeql  get_user_by_email_async_edgeql.py  get_user_by_session_key.edgeql  get_user_by_session_key_async_edgeql.py  list_team_invites.edgeql  list_team_invites_async_edgeql.py
api/foodieyak/views/: activity_view.py  logout_view.py  place_view.py  places_view.py  refresh_session_view.py  responses.py
api/s/: build-and-push  deploy  dev
functions/: .eslintrc.js  .prettierignore  firebase.json  package.json  tsconfig.json
functions/s/: deploy-prod  deploy-stage  fmt  typecheck
functions/src/: api-schema.ts  index.ts
functions/src/migrations/: activityBackfill.ts  backfillActivitiesDeleted.ts  backfillCheckinPlaceIds.ts  backfillCheckinViewerIds.ts  deleteBackfillActivities.ts  placesCheckinCheckedinAt.ts
ui/: .eslintignore  .eslintrc.js  .firebaserc  .prettierignore  firebase.json  firestore.rules  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/functions/: .eslintrc.js  package.json
ui/functions/src/: index.ts  migration.ts
ui/public/.well-known/: aapple-app-site-association  apple-app-site-association
ui/s/: fmt  lint  test  typecheck
ui/src/: App.tsx  api-schemas.ts  api-transforms.ts  api.ts  assertCond.ts  assertNever.ts  config.ts  date.ts  db.ts  fakeDb.ts  hooks.ts  main.tsx  paths.ts  query.ts  textutils.test.ts  textutils.ts  transforms.ts  type-guards.ts
ui/src/components/: AuthForm.tsx  CheckInCommentCard.tsx  DelayedLoader.tsx  EmptyStateText.tsx  ErrorBoundary.tsx  ErrorStateText.tsx  GoogleMapsJSMap.tsx  GoogleMapsSelectInput.tsx  GoogleMapsStaticImage.tsx  HomeButton.tsx  LocationImage.tsx  NavBar.tsx  NavigationMoreMenu.tsx  Page.tsx  PlaceInfoPanel.tsx  Ratings.tsx  ReadonlyInput.tsx
ui/src/pages/: ActivityView.page.tsx  AuthForgotPassword.tsx  AuthLoginView.page.tsx  AuthPasswordReset.page.tsx  AuthSignupView.page.tsx  CheckInCreateView.page.tsx  CheckInDetailView.page.tsx  CheckInEditView.page.tsx  FriendsCreateView.page.tsx  FriendsListView.page.tsx  MapListView.page.tsx  MenuItemDetailView.page.tsx  MenuItemEditView.page.tsx  MergePlaceintoPlaceModal.tsx  NoMatchView.page.tsx  PlacesCreateView.page.tsx  PlacesDetailView.page.tsx  PlacesEditView.page.tsx  PlacesListView.page.tsx  SettingsView.page.tsx
ui/src/types/: google-maps.d.ts
(+2 files in other folders)
