[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.31.1"
edgedb = "^1.7.0"
uvicorn = "^0.23.2"
passlib = {extras = ["argon2"], version = "^1.7.4"}
based58 = "^0.1.1"
attrs = "^23.1.0"


[tool.poetry.dev-dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
httpx = "^0.25.0"
ruff = "^0.0.292"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:Accessing argon2.__version__ is deprecated:DeprecationWarning',
]


[tool.ruff]
select = [
    "E",
    "F",
    "TID252",
    "I001",
    "T20",
    "C4",
    "UP",
    "N",
    "BLE",
    "B",
    "RET",
    "SIM",
    "ARG",
    "DTZ",
    "ERA",
    "RUF",
]
src = ["foodieyak"]
ignore = [
    "E501", # line length is handled by black
    "ARG001", # pytest fixtures mess with this
    "ARG002", # sometimes parent classes require params
    "N806", # django migrations violate this a lot
    "B008", # type.Argument violates this
    "N815", # we mix and match casing in serializers
    "ARG005", # monkey patching false positive with *args, and **kwargs
    "N805", # false positive with pydantic
    "N802", # DRF serializers mess with this
    "RET505", # if, elif, else are fine with returns
    "RET507", # if, elif, else with continue is also fine
    "RET508", # if, elif, else with break is also fine
]
unfixable = ["ERA001"] # we want to check ourselves before we delete commented out code. Also this doesn't cleanup all of it.
target-version = "py38"
