[tool.poetry]
name = "foodieyak"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
firebase-admin = "^6.2.0"
starlette = "^0.33.0"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
pyjwt = "^2.8.0"
pydantic = "^2.5.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
watchfiles = "^0.21.0"

[tool.ruff]
select = [
    "E",
    "F",
    "TID252",
    "I001",
    "T20",
    "C4",
    "UP",
    "N",
    "BLE",
    "B",
    "RET",
    "SIM",
    "ARG",
    "DTZ",
    "ERA",
    "RUF",
]
src = ["foodieyak"]
ignore = [
    "E501", # line length is handled by black
    "ARG001", # pytest fixtures mess with this
    "ARG002", # sometimes parent classes require params
    "N806", # django migrations violate this a lot
    "B008", # type.Argument violates this
    "N815", # we mix and match casing in serializers
    "ARG005", # monkey patching false positive with *args, and **kwargs
    "N805", # false positive with pydantic
    "N802", # DRF serializers mess with this
    "RET505", # if, elif, else are fine with returns
    "RET507", # if, elif, else with continue is also fine
    "RET508", # if, elif, else with break is also fine
]
unfixable = ["ERA001"] # we want to check ourselves before we delete commented out code. Also this doesn't cleanup all of it.
target-version = "py311"

[tool.ruff.isort]
known-third-party = ["starlette"]
known-first-party = ["foodieyak"]

[tool.ruff.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
